finish auth API documentation
